# bx-bluetooth

./: .gitignore  ModuleConfig.bx
.codex-tmp/: matchbox-building-doc.md  matchbox-esp32-doc.md  matchbox-vm-mod.rs
.github/workflows/: deploy-pages.yml
docs/: bx-bluetooth.md  prd-bx-bluetooth.md
docs/examples/: browser-request-device.bxs  connect-discover-select-write.bxs  native-scan.bxs  printer-adjacent-write.bxs
docs/specs/: matchbox-vm-binary-and-native-async.md
matchbox/: Cargo.toml
matchbox/examples/: esp32_scan_harness.rs
matchbox/src/: lib.rs
matchbox/src/backend/: esp32.rs  mod.rs  native.rs  wasm.rs
site/: app.js  index.html  printer_harness.bxs  styles.css
site-host/: Cargo.toml
site-host/src/: lib.rs
site/pkg/: printer_harness.d.ts  printer_harness.js  printer_harness_bg.wasm  printer_harness_bg.wasm.d.ts
