[package]
name = "bx-bluetooth-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
matchbox_vm = { path = "../../../ortus-boxlang/matchbox/crates/matchbox-vm", features = ["js"] }
matchbox-macros = { path = "../../../ortus-boxlang/matchbox/crates/matchbox-macros" }
uuid = "1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
btleplug = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.89", features = [
    "Window",
    "Navigator",
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
    "BluetoothCharacteristicProperties",
    "BluetoothLeScanFilterInit",
    "RequestDeviceOptions"
] }
