[package]
name = "bx-bluetooth-native"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
matchbox_vm = { path = "../../../ortus-boxlang/matchbox/crates/matchbox-vm", features = ["js"] }
matchbox-macros = { path = "../../../ortus-boxlang/matchbox/crates/matchbox-macros" }
uuid = "1.8"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "espidf")))'.dependencies]
btleplug = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[target.'cfg(target_os = "espidf")'.dependencies]
esp32-nimble = "0.12"
esp-idf-svc = { version = "0.52", features = ["binstart", "critical-section", "embassy-time-driver"] }
esp-idf-sys = "0.37"
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.89", features = [
    "Window",
    "Navigator",
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
    "BluetoothCharacteristicProperties",
    "BluetoothLeScanFilterInit",
    "RequestDeviceOptions"
] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
